# rusty-browser

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  rustmani.spec.md  rustmani.yaml
.github/workflows/: build-deb.yml  docker.yml  release.yml
.postman/: config.json
postman/globals/: workspace.postman_globals.json
rustmani-agent/: Cargo.toml  README.md
rustmani-agent/src/: browser.rs  error.rs  executor.rs  main.rs  proxy.rs  server.rs
rustmani-cli/: Cargo.toml
rustmani-cli/src/: client.rs  main.rs
rustmani-cli/src/commands/: browser.rs  instruct.rs  mod.rs  session.rs
rustmani-common/: Cargo.toml  README.md
rustmani-common/src/: config.rs  error.rs  flux.rs  lib.rs  redis_store.rs  state.rs
rustmani-common/src/ai/: mod.rs  openai.rs  openrouter.rs
rustmani-proto/: Cargo.toml  README.md  build.rs
rustmani-proto/proto/: rustmani.proto
rustmani-proto/src/: lib.rs
rustmani-server/: Cargo.toml  README.md  example.agent-proxies.yaml  example.rustmani.yaml  rustmani.service
rustmani-server/src/: main.rs
rustmani-server/src/grpc/: mod.rs
rustmani-server/src/http/: error.rs  middleware.rs  mod.rs
rustmani-server/src/http/handlers/: browsers.rs  initialize.rs  mod.rs
rustmani-server/src/orchestrator/: instruct_engine.rs
rustmani-server/src/services/: browser_service.rs  initialize_service.rs  instruct_service.rs  mod.rs
rusty-agent/: Cargo.toml  README.md
rusty-agent/benches/: browser_config.rs
rusty-agent/src/: browser.rs  error.rs  executor.rs  main.rs  server.rs
rusty-cli/: Cargo.toml  README.md
rusty-cli/src/: client.rs  config.rs  error.rs  main.rs
rusty-cli/src/commands/: browser.rs  instruct.rs  session.rs
rusty-common/: Cargo.toml  README.md
rusty-common/benches/: ai.rs  config.rs  ui_map.rs
rusty-common/src/: config.rs  error.rs  flux.rs  lib.rs  redis_store.rs  state.rs  ui_map.rs  util.rs
rusty-common/src/ai/: mod.rs  openai.rs  openrouter.rs
rusty-proto/: Cargo.toml  README.md  build.rs
rusty-proto/proto/: rustmani.proto  rusty.proto
rusty-proto/src/: lib.rs
rusty-server/: Cargo.toml  README.md  agent-proxies.yaml  example.rustmani.yaml  example.rusty.yaml  rustmani.service
rusty-server/examples/config/quick/: agent-proxies.yaml  flux.yaml  rusty.yaml
rusty-server/src/: main.rs
rusty-server/src/grpc/: mod.rs
rusty-server/src/http/: error.rs  middleware.rs  mod.rs
rusty-server/src/http/handlers/: browsers.rs  mod.rs
rusty-server/src/orchestrator/: instruct_engine.rs
rusty-server/src/services/: browser_service.rs  initialize_service.rs  instruct_service.rs  mod.rs
