[package]
name = "rustmani-agent"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "rustmani-agent"
path = "src/main.rs"

[dependencies]
rustmani-common = { path = "../rustmani-common" }
rustmani-proto = { path = "../rustmani-proto" }
rustenium-identity = { path = "D:\\Documents\\m-workspace\\rustenium-identity"}
rustenium = { path = "D:\\Documents\\m-workspace\\rustenium\\rustenium"}
tokio = { version = "1.50.0", features = ["full"] }
serde = "1.0.228"
serde_json = "1.0.149"
thiserror = "2.0.18"
tracing-subscriber = "0.3.23"
tracing = "0.1.44"
uuid = "1.23.0"
tonic = { version = "0.14.5" }
prost = "0.14.3"
