[package]
name = "rustmani-common"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.50.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
serde_derive = "1.0.228"
yaml_serde = "0.10.4"
thiserror = "2.0.18"
tracing = "0.1.44"
uuid = "1.23.0"
reqwest = { version = "0.13.2", features = ["json", "multipart"] }
redis = { version = "1.1.0", features = ["tokio-comp", "connection-manager"] }
base64 = "0.22.1"
image = "0.25.10"
