[package]
name = "rustmani-server"
version = "0.1.0"
edition = "2024"
description = "Rustmani master server — HTTP API and AI instruct engine for browser automation"
license = "MIT"

[[bin]]
name = "rustmani"
path = "src/main.rs"

[dependencies]
rustmani-common = { path = "../rustmani-common" }
rustmani-proto = { path = "../rustmani-proto" }
tokio = { version = "1.50.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
yaml_serde = "0.10.4"
thiserror = "2.0.18"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tracing = "0.1.44"
uuid = { version = "1.23.0", features = ["v4"] }
reqwest = "0.13.2"
redis = "1.1.0"
base64 = "0.22.1"
image = "0.25.10"
axum = "0.8.8"
tonic = { version = "0.14.5" }
prost = "0.14.3"
tower-http = { version = "0.6", features = ["cors", "trace"] }
anyhow = "1.0"
async-trait = "0.1"
zip = "2"
futures = "0.3"

[package.metadata.deb]
name = "rustmani-server"
priority = "optional"
section = "net"
maintainer = "Wraithbytes <ops@wraithbytes.io>"
copyright = "2025 Wraithbytes"
extended-description = """
The master server for the Rustmani browser automation cluster.
Exposes an HTTP API to manage browser agents and an AI instruct
engine to drive them via screenshot-based automation.
"""
assets = [
  ["target/release/rustmani", "usr/bin/rustmani", "755"],
  ["rustmani.yaml", "etc/rustmani/rustmani.yaml", "644"],
]
conf-files = ["/etc/rustmani/rustmani.yaml"]
systemd-units = [{ unit-name = "rustmani" }]
