[package]
name = "rusty-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "rusty-cli"
path = "src/main.rs"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
reqwest = { version = "0.13.2", features = ["json", "blocking"] }
clap = { version = "4.6.0", features = ["derive", "env"] }
anyhow = "1.0"
