[package]
name = "rusty-server"
version = "0.1.0"
edition = "2024"
description = "Rusty master server — HTTP API and AI instruct engine for browser automation"
license = "MIT"

[[bin]]
name = "rusty"
path = "src/main.rs"

[dependencies]
rusty-common = { path = "../rusty-common" }
rusty-proto = { path = "../rusty-proto" }
tokio = { version = "1.50.0", features = ["full"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
yaml_serde = "0.10.4"
thiserror = "2.0.18"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tracing = "0.1.44"
uuid = { version = "1.23.0", features = ["v4"] }
reqwest = "0.13.2"
redis = "1.1.0"
base64 = "0.22.1"
image = "0.25.10"
axum = "0.8.8"
tonic = { version = "0.14.5", features = ["tls-ring"] }
rustls = { version = "0.23", features = ["ring"] }
rcgen = "0.13"
prost = "0.14.3"
tower-http = { version = "0.6", features = ["cors", "trace"] }
anyhow = "1.0"
async-trait = "0.1"
serde_yaml = "0.9"
zip = "2"
futures = "0.3"
tokio-stream = "0.1"

[package.metadata.deb]
name = "rusty-server"
revision = "0"
priority = "optional"
section = "net"
maintainer = "Daniel Shogbon <ishogbon@gmail.com>"
copyright = "@2025"
extended-description = """
The master server for the Rusty browser automation cluster.
"""
assets = [
  ["target/release/rusty", "usr/bin/rusty", "755"],
  ["example.rusty.yaml", "etc/rusty/rusty.yaml", "644"],
  ["rusty.service", "lib/systemd/system/rusty.service", "644"],
]
conf-files = ["/etc/rusty/rusty.yaml"]
systemd-units = [{ unit-name = "rusty.service" }]
